; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_microdvddec.c_microdvd_set_tag.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_microdvddec.c_microdvd_set_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.microdvd_tag = type { i32 }

@MICRODVD_TAGS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.microdvd_tag*, i32)* @microdvd_set_tag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @microdvd_set_tag(%struct.microdvd_tag* %0, i32 %1) #0 {
  %3 = alloca %struct.microdvd_tag, align 4
  %4 = alloca %struct.microdvd_tag*, align 8
  %5 = alloca i32, align 4
  %6 = getelementptr inbounds %struct.microdvd_tag, %struct.microdvd_tag* %3, i32 0, i32 0
  store i32 %1, i32* %6, align 4
  store %struct.microdvd_tag* %0, %struct.microdvd_tag** %4, align 8
  %7 = load i32, i32* @MICRODVD_TAGS, align 4
  %8 = getelementptr inbounds %struct.microdvd_tag, %struct.microdvd_tag* %3, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @indexof(i32 %7, i32 %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  br label %20

14:                                               ; preds = %2
  %15 = load %struct.microdvd_tag*, %struct.microdvd_tag** %4, align 8
  %16 = load i32, i32* %5, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.microdvd_tag, %struct.microdvd_tag* %15, i64 %17
  %19 = call i32 @memcpy(%struct.microdvd_tag* %18, %struct.microdvd_tag* %3, i32 4)
  br label %20

20:                                               ; preds = %14, %13
  ret void
}

declare dso_local i32 @indexof(i32, i32) #1

declare dso_local i32 @memcpy(%struct.microdvd_tag*, %struct.microdvd_tag*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
